center canvas element

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+body {
+  font-family: cursive;
+}
+
+h1 {
+  margin-left: 10%;
+}
+
 canvas {
   border-radius: 25px;
+  padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 800px;
 }
